main.css
/* @override http://localhost/~kubowo/vizitka/main.css */

/* @group Layout */

body {
	font: 90% Geneva, "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
	margin: 0;
	padding: 0;
	text-align: center;
	color: #000;
	background: url(img/bg.png) repeat-x fixed
}

#container {
	width: 394px;
	margin: 0 auto;
	text-align: left
}

#mainContent {
	padding: 10px 20px;
	background: url(img/main-bg.png) repeat-y;
	margin: 0;
	position: relative;
	color: gray
}

#content {
	padding: 0 8px;
	max-height: 420px;
}

/* @end */

/* @group Langmenu */

.langmenu {
	background: url(img/langmenu.png) no-repeat 0 bottom;
	width: 94px;
	height: 35px;
	position: fixed;
	top: 0;
	right: 10px;
	z-index: 1
}

.langmenu:hover {
	padding-top: 6px
}

.langmenu a {
	display: inline-block;
	width: 22px;
	height: 11px;
	background-position: top;
	background-repeat: no-repeat;
	margin-bottom: 3px
}

.langmenu a.active,.langmenu a:hover {
	height: 19px;
	background-position: bottom;
	margin-bottom: -1px;
	
}

.langmenu a.cz {
	background-image: url(img/cza.png)
}

.langmenu a.en {
	background-image: url(img/gba.png)
}

.langmenu span {
	display: none
}

/* @end */

/* @group Navigation */

.navigation {
	margin-left: -21px;
	margin-right: -10px;
	background: url(img/navigation.png) no-repeat;
	padding: 14px 18px 18px;
	margin-top: 73px
}

.navigation a {
	margin-right: 30px;
	margin-left: 28px;
	display: inline-block;
	color: white;
	padding: 4px;
	text-decoration: none;
}

.navigation a.active {
	color: #222;
}

.navigation a:hover {
	color: grey;
}

/* @end */

/* @group General */

a {
	color: gray
}

a img {
	border: none
}

a:hover {
	text-decoration: none
}

/* @end */

/* @group Header & Footer */

.header {
	background: url(img/header.png) no-repeat -5px;
	color: #e3e3e3;
	height: 36px;
	padding-top: 26px;
	padding-left: 20px;
	margin: 30px 0 0;
	font-size: 16px;
	letter-spacing: 1px;
	font-style: normal;
	font-weight: normal;
	text-transform: lowercase;
}

.header::before {
	content: ".:";
}

.footer {
	padding: 20px;
	background: url(img/footer.png) no-repeat;
	text-align: center;
	color: #939393;
	font: italic
}

.resume {
	position: absolute;
	width: 222px;
	top: -7px;
}

.left {
	position: absolute;
	right: 11px;
	top: -9px;
	z-index: 5;
}

/* @end */

/* @group Frame */

.frame {
	width: 337px;
	margin-left: 5px
}

.frame .top {
	background: url(img/divtop.png) no-repeat;
	height: 16px;
	margin-bottom: 0
}

.frame .main {
	background: url(img/divmain.png) repeat-y;
	padding: 0 8px 0 14px
}

.frame .bottom {
	background: url(img/divbottom.png) no-repeat;
	height: 16px;
	margin-top: 0
}

/* @end */

.pane {
	position: relative;
	margin: 0;
	width: 307px;
	height: 280px;
	float: left;
	overflow: auto;
	padding: 0 15px
}

.pane p {
	margin-top: 6px;
	margin-bottom: 6px
}

.quicknav {
	display: none;
	text-align: center;
	position: absolute;
	bottom: 0;
	width: 300px
}

/* New stuf */

/* @group Tooltip */

div.tooltip {
	background: transparent url(img/black.png) no-repeat scroll 0 0;
	font-size: 14px;
	height: 153px;
	padding: 19px;
	width: 175px;
	font-size: 14px;
	display: none;
	color: #fff;
	margin-top: 95px;
	
/*	margin-left: -200px;
	z-index: -1;*/
}

/* tooltip title element (h3) */

div.tooltip h3 {
	margin: 0;
	font-size: 18px;
	color: #fff;
}

/* @end */

/* @group Scrollable */

/* 
	root element for the scrollable. 
	when scrolling occurs this element stays still. 
*/

div.scrollable {

	position: relative;
	overflow: hidden;
	width: 327px;
	height: 300px;
	margin-left: -10px;
}

/* 
	root element for scrollable items. Must be absolutely positioned
	and it should have a super large width to accomodate scrollable items.
	it's enough that you set width and height for the root element and
	not for this element.
*/

div.scrollable div.items {

	width: 20000em;
	position: absolute;
	clear: both;
	margin-left: 10px;
}

/* single scrollable item */

div.scrollable div.items div {
	float: left;
	text-align: center;
	width: 297px;
	margin-right: 20px;
	-moz-border-radius: 5px;
}

/* active item */

div.scrollable div.items div.active {
	border: 1px inset #ccc;
	background-color: #fff;
}

div.portnav {
	background: url(img/divmain.png) repeat-y;
}

/* position and dimensions of the navigator */

div.navi {
	

/*padding-left:138px;*/
	width: 200px;
	margin: auto;
	height: 20px;
	padding-top: 10px;
	display: inline;
}

/* items inside navigator */

div.navi a {
	width: 8px;
	height: 8px;
	float: left;
	margin: 3px;
	background: url(img/navigator.png) 0 0 no-repeat;
	display: block;
	font-size: 1px;
	cursor: pointer;
}

/* mouseover state */

div.navi a:hover {
	background-position: 0 -8px;
}

/* active state (current page state) */

div.navi a.active {
	background-position: 0 -16px;
}

/* prev, next, prevPage and nextPage buttons */

a.prev, a.next, a.prevPage, a.nextPage {
	

/*display:block;*/
	width: 18px;
	height: 18px;
	content: "<<";
	float: left;

/*margin:43px 10px;*/
	cursor: pointer;
	font-size: 1px;
}

/* mouseover state */

a.prev:hover, a.next:hover, a.prevPage:hover, a.nextPage:hover {
	background-position: 0px -18px;
}

/* disabled navigational button */

a.disabled {
	visibility: hidden !important;
}

/* next button uses another background image */

a.next, a.nextPage {
	content: ">>";
	clear: right;
}

a.prev {
	margin-left: 100px;
}

/* 
	root element for the scrollable. 
	when scrolling occurs this element stays still. 
*/

div.scrollable div.items div.active {
	border: 1px inset #ccc;
	background-color: #fff;
}

/* @end */

/* @group Twitter div */

div#twitter_div {
	position: relative;
	overflow: hidden;
	width: 327px;
	height: 100px;
	margin-left: -10px;
}

/* 
	root element for scrollable items. Must be absolutely positioned
	and it should have a super large width to accomodate scrollable items.
	it's enough that you set width and height for the root element and
	not for this element.
*/

div#twitter_div ul#twitter_update_list {
	/* this cannot be too large */
	width: 20000em;
	position: absolute;
	clear: both;
	/* decoration */
	margin-left: 10px;
	padding-left: 0;
}

/* single scrollable item */

div#twitter_div ul#twitter_update_list li {
	float: left;
	/* custom decoration */
	text-align: center;
	width: 297px;
	margin-right: 20px;
	margin-left: 0;
	-moz-border-radius: 5px;
	list-style-type: none;
}

div#twitter_div ul#twitter_update_list li span {
	display: block;
	font-size: 110%;
}

/* @end */


#unsupported {
	color: #fff;
	background-image: url(img/main-bg.png);
	padding: 1px 20px 20px;
	display: none;
}

#unsopported p {
	background-color: #3a3a3a;
}

.icons a img {
    opacity: 0.5;
    padding: 0 1px;
}

.icons a:hover img {
    opacity: 1;
}
.icons div {
    display:block;
    text-align:center;
}

